fix: bug with z-index in profile dropdown

--- a/src/components/Profile/styles.module.scss
+++ b/src/components/Profile/styles.module.scss
@@ -47,6 +47,7 @@
   padding-left: var(--spacing-3);
   background-color: var(--background-color);
   border-radius: 5px;
+  z-index: 999;
 }
 
 .email {
